--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,11 +5,9 @@
   --font-family-hero: 'Montserrat', sans-serif;
 
   --font-size: 14px;
-  --font-size-hero: min(15vw, 135px);
-  /* clamp(4rem, 5vmax, 135px); */
 
   --color-blue: #00C2FF;
-  --color-lighhtblue: #c8fff4;
+  --color-lightblue: #c8fff4;
 }
 
 html,
@@ -36,7 +34,6 @@ a {
 
 /* MOBILE MENU */
 
-/* Position and sizing of burger button */
 .bm-burger-button {
    position: fixed;
    right: 0;
@@ -48,9 +45,7 @@ a {
    z-index: 999 !important;
 }
 
-/* Position and sizing of clickable cross button */
 .bm-cross-button {
-   /* background-color: tomato; */
    width: 48px !important;
    height: 48px !important;
    top: 0 !important;
@@ -59,16 +54,11 @@ a {
    margin-right: 8%;
 }
 
-/*
-Sidebar wrapper styles
-Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
-*/
 .bm-menu-wrap {
    position: fixed;
    height: 100%;
 }
 
-/* Styling of overlay */
 .bm-overlay {
    background: linear-gradient(180deg, #00c2ff, #c8fff4) !important;
    transition: background 2s;
@@ -78,4 +68,19 @@ Note: Beware of modifying this element as it can break the animations - you shou
    margin-top: 15%;
    padding: 5%;
    padding-right: 8%;
+}
+
+/* MODAL */
+
+.ReactModal__Overlay {
+   opacity: 0;
+   transition: opacity .25s
+}
+
+.ReactModal__Overlay--after-open{
+   opacity: 1;
+}
+
+.ReactModal__Overlay--before-close{
+   opacity: 0;
 }
