--- a/src/components/About/index.module.css
+++ b/src/components/About/index.module.css
@@ -39,6 +39,12 @@
    cursor: pointer;
 }
 
+.textUnit {
+    color:white;
+    background-color: black;
+    padding: .05rem .5rem;
+}
+
 .linkUnit {
     text-decoration: underline;
     cursor: pointer;
