--- a/src/components/CCC/styles.module.css
+++ b/src/components/CCC/styles.module.css
@@ -5,6 +5,7 @@
    text-transform: uppercase;
    line-height: 80.6%;
    margin: 0;
+   margin-bottom: 2rem;
 
    color: white;
 
@@ -15,3 +16,15 @@
    height: 100%;
    width: 100%;
 }
+
+.h2 {
+    margin: 0;
+    margin-bottom: 1rem;
+    
+    font-size: calc(var(--font-size) * 1.5);
+    font-weight: bold;
+    letter-spacing: .5rem;
+    text-transform: uppercase;
+
+    color: white;
+ }
