--- a/src/components/About/index.module.css
+++ b/src/components/About/index.module.css
@@ -1,6 +1,7 @@
 .section {
     width: 100%;
-    min-height: 100vh;
+    overflow-y: hidden;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -13,36 +14,63 @@
     padding-bottom: 3%;
 }
 
-.button {   
-   width: 470px;
-   max-width: 100%;
+.button {
+   width: 100%;
+   max-width: 400px;
    align-self: center;
-   padding: 25px;
-   background-color: var(--color-blue);
-   border: none;
-   border-radius: 10px;
+   margin-top: 10%;
+   background-color: transparent;
+   border: solid 12px var(--color-blue);
+   border-radius: 50%;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-   font-weight: bold;
-   letter-spacing: .25em;
-   text-transform: uppercase;
-
-   color: white;
+   color: var(--color-blue);
 
    transition: all .25s;
+   position: relative;
+}
+
+.button::after {
+    content: '';
+    display: block;
+    margin-top: 100%;
 }
 
 .button:hover {
-   background-color: var(--color-lightblue);
-   color: var(--color-blue);
+   background-color: var(--color-blue);
    box-shadow: 0px 4px 24px var(--color-blue);
+   border-width: 0px;
+   color: white;
    cursor: pointer;
+}
+
+.butonText {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+   font-family: var(--font-family);
+   font-size: 1.75rem;
+   font-weight: bold;
+   letter-spacing: .25em;
+   text-transform: uppercase;
 }
 
 .textUnit {
     color:white;
     background-color: black;
     padding: .05rem .5rem;
+}
+
+.credits {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .linkUnit {
