--- a/src/components/CCC/styles.module.css
+++ b/src/components/CCC/styles.module.css
@@ -21,10 +21,8 @@
     margin: 0;
     margin-bottom: 1rem;
     
-    font-size: calc(var(--font-size) * 1.5);
+    font-size: calc(min(1rem + 2.5vmin, 45px));
     font-weight: bold;
     letter-spacing: .5rem;
     text-transform: uppercase;
-
-    color: white;
  }
