--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Roboto+Mono:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Roboto:wght@500;700&display=swap');
 
 :root {
-  --font-family: 'Roboto Mono', monospace;
+  --font-family: 'Roboto', sans-serif;
   --font-family-hero: 'Montserrat', sans-serif;
 
   --font-size: 14px;
