--- a/src/components/Modal/index.module.css
+++ b/src/components/Modal/index.module.css
@@ -9,3 +9,12 @@
     background: transparent;
     cursor: pointer;
 }
+
+.top {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    font-size: 2rem;
+    text-transform: uppercase;
+}
