--- a/src/components/About/index.module.css
+++ b/src/components/About/index.module.css
@@ -28,6 +28,7 @@
 
    transition: all .25s;
    position: relative;
+   align-self: center;
 }
 
 .button::after {
@@ -42,10 +43,6 @@
    border-width: 0px;
    color: white;
    cursor: pointer;
-}
-
-.butonMobile {
-    align-self: center;
 }
 
 .butonText {
@@ -64,13 +61,6 @@
    text-transform: uppercase;
 }
 
-.textUnit {
-    color:white;
-    background-color: black;
-    padding: .05rem .5rem;
-    white-space: nowrap;
-}
-
 .credits {
     height: 100%;
     display: flex;
@@ -79,6 +69,13 @@
 }
 
 .linkUnit {
-    text-decoration: underline;
     cursor: pointer;
+    color:white;
+    background-color: black;
+    padding: .05rem .5rem;
+    white-space: nowrap;
+}
+
+.linkUnit:hover {
+    text-decoration: underline;
 }
