--- a/src/components/CCC/styles.module.css
+++ b/src/components/CCC/styles.module.css
@@ -1,6 +1,6 @@
 .h1 {
    font-family: var(--font-family-hero);
-
+   font-size: calc(min(2rem + 9vmin, 135px));
    letter-spacing: .05em;
    text-transform: uppercase;
    line-height: 80.6%;
@@ -11,6 +11,9 @@
 
    display: flex;
    flex-direction: column;
+   align-items: flex-start;
+
+   width: fit-content;
 }
 .image {
    height: 100%;
@@ -18,11 +21,15 @@
 }
 
 .h2 {
-    margin: 0;
-    margin-bottom: 1rem;
-    
+    /* margin: 0;
     font-size: calc(min(1rem + 2vmin, 45px));
+    white-space: nowrap;
     font-weight: bold;
     letter-spacing: .5rem;
-    text-transform: uppercase;
- }
+    text-transform: uppercase; */
+    display: none;
+}
+
+.h2Mobile {
+    margin-bottom: 1rem;
+}
