--- a/src/components/CCC/styles.module.css
+++ b/src/components/CCC/styles.module.css
@@ -1,5 +1,5 @@
 .h1 {
-   font-family: var(--font-family-hero);
+   /* font-family: var(--font-family-hero);
    font-size: calc(min(2rem + 9vmin, 135px));
    letter-spacing: .05em;
    text-transform: uppercase;
@@ -13,7 +13,8 @@
    flex-direction: column;
    align-items: flex-start;
 
-   width: fit-content;
+   width: fit-content; */
+   display: none;
 }
 .image {
    height: 100%;
@@ -28,8 +29,4 @@
     letter-spacing: .5rem;
     text-transform: uppercase; */
     display: none;
-}
-
-.h2Mobile {
-    margin-bottom: 1rem;
 }
