--- a/src/components/About/index.module.css
+++ b/src/components/About/index.module.css
@@ -6,14 +6,22 @@
     flex-direction: column;
     justify-content: space-between;
 
-    background-image: url(/static/map.svg);
-    background-position: top;
-    background-position-y: min(-220px, -50%);
-    background-repeat: no-repeat;
-    background-size: contain;
-
     padding-bottom: 3%;
     padding-top: 1%;
+}
+
+.section::before {
+    content: '';
+    position: absolute;
+    top: max(-100px, -45%);
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+    background-image: url(/static/map.svg);
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .button {
