fixed body scroll while in modal

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,6 +21,9 @@ body {
   font-size: var(--font-size);
   font-family: var(--font-family);
   letter-spacing: 0.03rem;
+
+  height: 100%;
+  overflow-y: auto;
 }
 
 a {
