--- a/src/components/About/index.module.css
+++ b/src/components/About/index.module.css
@@ -36,6 +36,7 @@
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
    color: var(--color-blue);
+   text-align: start;
 
    transition: all .25s;
    position: relative;
